Fix overflow on user profile page

--- a/app/assets/stylesheets/comment.css
+++ b/app/assets/stylesheets/comment.css
@@ -30,7 +30,7 @@
   margin-bottom:15px;
 }
 
-#modal-video-list {
+#user-modal {
   overflow-y:auto;
   height:300px;
 }
